busybox-sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox-sidecar
  name: busybox-sidecar
spec:
  volumes:
  - name: vol
    emptyDir: {}
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do echo 'Hi I am from Main container' >> /var/log/index.html; sleep
      5; done
    image: busybox
    name: busybox
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /var/log
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /usr/share/nginx/html 
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
