multi-pods.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-pods
  name: multi-pods
spec:
  volumes:
  - name: vol
    emptyDir: {}
  containers:
  - image: busybox
    name: busybox-init
    command:
    - /bin/sh
    - -c
    - wget -O /work-dir/index.html http://neverssl.com/online
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /work-dir
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /usr/share/nginx/html
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
