nginx-context.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  securityContext:
    runAsUser: 101
  containers:
  - image: nginx
    name: nginx
    resources: {}
    securityContext:
      capabilities:
        add: ["NET_ADMIN","SYS_TIME"]
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
