nginx-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-pv
  name: nginx-pv
spec:
  volumes:
  - name: task-pv-storage
    persistentVolumeClaim:
      claimName: task-pv-claim
  containers:
  - image: nginx
    name: nginx-pv
    ports:
    - containerPort: 80
      name: "http-server"
    resources: {}
    volumeMounts:
    - name: task-pv-storage
      mountPath: /usr/share/nginx/html
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
