nginx-secret-env.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
	  secretKeyRef:
	    name: mysecret2
	    key: username
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
