nginx-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
  - name: vol
    secret:
     secretName: mysecret2
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /etc/foo
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
