nginx.multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-multi
  name: nginx-multi
spec:
  volumes:
  - name: nginx-volume
    emptyDir: {}
  containers:
  - image: nginx
    name: nginx-multi
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: nginx-volume
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
