pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  volumes:
  - name: myvolume
    persistentVolumeClaim:
      claimName: mypvc
  containers:
  - args:
    - /bin/sh -c sleep 3600
    image: busybox
    name: busybox
    resources: {}
    volumeMounts:
    - name: myvolume
      mountPath: /etc/foo
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
