sidecar-multi.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-cont-pod
  name: multi-cont-pod
spec:
  volumes:
  - name: vol-logs
    emptyDir: {}
  containers:
  - image: nginx
    name: sidecar
    resources: {}
    ports:
    - containerPort: 80
    volumeMounts:
    - name: vol-logs
      mountPath: /usr/share/nginx/html
  - args:
    - /bin/sh 
    - -c 
    - while true; do echo 'Hi I am from Main container' >> /var/log/index.html; sleep 5; done
    image: busybox
    name: multi-cont-pod
    resources: {}
    volumeMounts:
    - name: vol-logs
      mountPath: /var/log
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
